--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,106 +1,134 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"
-    android:background="@drawable/greenn"
-    tools:context=".Login">
+    android:background="@drawable/green_background_img"
+    tools:context=".LoginActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <!--Progressbar acts as a loading icon-->
+    <ProgressBar
+        android:id="@+id/loginPb"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:orientation="vertical">
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
-        <TextView
-            android:id="@+id/loginTv"
+    <!--The scrollview allows the user to scroll to the next input field while the keyboard is open-->
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="50dp"
-            android:text="@string/login"
-            android:textAlignment="center"
-            android:textColor="@color/my_app_on_surface"
-            android:textSize="48sp"
-            android:textStyle="bold" />
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:orientation="vertical">
 
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/emailTb"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:hint="@string/email"
-            app:boxBackgroundColor="@color/my_app_on_surface"
-            app:boxBackgroundMode="filled">
-
-            <com.google.android.material.textfield.TextInputEditText
-                style="@null"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inputType="textEmailAddress"
-                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
-                android:textColor="@color/my_app_primary_dark" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/passwordTb"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:hint="@string/password"
-            app:boxBackgroundColor="@color/my_app_on_surface"
-            app:boxBackgroundMode="filled"
-            app:endIconMode="password_toggle"
-            app:passwordToggleTint="@color/my_app_primary">
-
-            <com.google.android.material.textfield.TextInputEditText
-                style="@null"
+            <!--Heading-->
+            <TextView
+                android:id="@+id/loginTv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
-                android:textColor="@color/my_app_primary_dark" />
+                android:layout_marginBottom="50dp"
+                android:text="@string/login"
+                android:textAlignment="center"
+                android:textColor="@color/my_app_on_surface"
+                android:textSize="48sp"
+                android:textStyle="bold" />
 
-        </com.google.android.material.textfield.TextInputLayout>
+            <!--Email textBox-->
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/emailTb"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:hint="@string/email"
+                app:boxBackgroundColor="@color/my_app_on_surface"
+                app:boxBackgroundMode="filled">
 
-        <Button
-            android:id="@+id/signUpBtn"
-            style="@style/Widget.Material3.Button.TextButton"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:text="@string/don_t_have_an_account"
-            android:textAlignment="viewStart"
-            android:textColor="@color/my_app_on_surface"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+                <com.google.android.material.textfield.TextInputEditText
+                    style="@null"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:inputType="textEmailAddress"
+                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
+                    android:textColor="@color/my_app_primary_dark" />
 
-        <Button
-            android:id="@+id/forgotPasswordBtn"
-            style="@style/Widget.Material3.Button.TextButton"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:text="Forgot Password?"
-            android:textAlignment="viewStart"
-            android:textColor="@color/my_app_on_surface"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-        <Button
-            android:id="@+id/loginBtn"
-            style="@android:style/Widget.Material.Button"
-            android:layout_width="300dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center_horizontal"
-            android:elevation="5dp"
-            android:text="@string/login"
-            android:textSize="16sp" />
+            <!--Password textBox-->
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/passwordTb"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:hint="@string/password"
+                app:boxBackgroundColor="@color/my_app_on_surface"
+                app:boxBackgroundMode="filled"
+                app:endIconMode="password_toggle"
+                app:passwordToggleTint="@color/my_app_primary">
 
-    </LinearLayout>
-</ScrollView>
+                <com.google.android.material.textfield.TextInputEditText
+                    style="@null"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
+                    android:textColor="@color/my_app_primary_dark" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <!--Sign up button-->
+            <Button
+                android:id="@+id/signUpBtn"
+                style="@style/Widget.Material3.Button.TextButton"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:text="@string/don_t_have_an_account"
+                android:textAlignment="viewStart"
+                android:textColor="@color/my_app_on_surface"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <!--Forgot password button-->
+            <Button
+                android:id="@+id/forgotPasswordBtn"
+                style="@style/Widget.Material3.Button.TextButton"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:text="@string/forgot_password"
+                android:textAlignment="viewStart"
+                android:textColor="@color/my_app_on_surface"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <!--Login button-->
+            <Button
+                android:id="@+id/loginBtn"
+                style="@android:style/Widget.Material.Button"
+                android:layout_width="300dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center_horizontal"
+                android:elevation="5dp"
+                android:text="@string/login"
+                android:textSize="16sp" />
+
+        </LinearLayout>
+
+    </ScrollView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
